--- a/css/index.css
+++ b/css/index.css
@@ -7,3 +7,15 @@ body{
 .edit-input {
     display: none;
   }
+button {
+    margin-right: 10px;
+}
+span {
+    margin-right: 10px;
+}
+a {
+    margin-right: 10px;
+}
+li {
+    padding: 5px;
+}
