--- a/css/index.css
+++ b/css/index.css
@@ -143,7 +143,7 @@ a:visited {
   }
 }
 
-.header {
+header {
   /*position: fixed;*/
   position: sticky;
   top: 0%;
@@ -257,4 +257,14 @@ form {
     justify-content: center;
     padding: 0;
   }
+}
+
+.connect li:hover {
+  font-size: 150%;
+}
+
+.menu-item:hover {
+  font-size: 150%;
+  background-color: rgb(255, 187, 0);
+  border-radius: 10px;
 }
