--- a/css/index.css
+++ b/css/index.css
@@ -144,7 +144,7 @@ a:visited {
 }
 
 header {
-  /*position: fixed;*/
+  height: 7rem;
   position: sticky;
   top: 0%;
   display: flex;
@@ -153,10 +153,10 @@ header {
   padding: 10px;
   animation: changeBackgroundColor 10s infinite;
 }
-/*body header {
-  position: sticky;
-  top: 0%;
-}*/
+
+html {
+  scroll-padding-top: 8rem;
+}
 
 /*Make list items inline boxes*/
 .menu {
@@ -268,3 +268,4 @@ form {
   background-color: rgb(255, 187, 0);
   border-radius: 10px;
 }
+
