Edited media queries and form display

--- a/css/index.css
+++ b/css/index.css
@@ -12,9 +12,17 @@ body {
   background-color: #DBC1AD;
   font-family: 'Belanosima', sans-serif;
   font-size: large;
+  display: flex; flex-direction: column;/*new*/
   color: #5d4d3c;
   height: 100%;
 }
+
+/*.main {
+  background-color: #DBC1AD;
+  width: 80%;
+  max-width: 75ch;
+  margin: 0 auto;
+}*/
 
 h1, h2, h3 {
   font-family: cooper;
@@ -49,6 +57,7 @@ footer {
   color: rgb(244, 225, 164);
   background-color: rgba(69, 160, 239, 0.475);
   padding: 1%;
+  width: 100%;
 }
 
 label {
@@ -151,6 +160,7 @@ header {
   width: 100%;
   padding: 10px;
   animation: changeBackgroundColor 10s infinite;
+  width: 100%;
 }
 
 html {
@@ -264,7 +274,7 @@ form {
   form {
     width: auto;
   }
-  
+    
   body {
     flex-direction: column;
     /*overflow-x: hidden; */
@@ -305,7 +315,7 @@ form {
   form label {
     display: block;
   }
-  
+
   body {
     flex-direction: column;
     /*overflow-x: hidden; */
